--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 		  <!-- Full-width images with number and caption text -->
 		  <div class="mySlides fade">
 			<div class="numbertext">1 / 3</div>
-			<img src="IMG_4834.jpg" style="width:100%">
+			<img src="Images/IMG_4834.jpg" style="width:100%">
 			<div class="text">Chris taking photos</div>
 		  </div>
 
 		  <div class="mySlides fade">
 			<div class="numbertext">2 / 3</div>
-			<img src="IMG_5563.JPG" style="width:100%">
+			<img src="Images/IMG_5563.JPG" style="width:100%">
 			<div class="text">Doggie</div>
 		  </div>
 
 		  <div class="mySlides fade">
 			<div class="numbertext">3 / 3</div>
-			<img src="DSC_3140.jpg" style="width:100%">
+			<img src="Images/DSC_3140.jpg" style="width:100%">
 			<div class="text">Swan</div>
 		  </div>
 
