Made changes to include Chris

--- a/contact_details.html
+++ b/contact_details.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="index.html">LUKE DAWE</a>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="index.html">DAWE PHOTOGRAPHY</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -41,7 +41,7 @@
 						<a class="dropdown-item" href="projects.html">Projects</a>
 						<a class="dropdown-item" href="about.html">About</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="contact_details.html">Contact Me</a>
+						<a class="dropdown-item" href="contact_details.html">Contact Us</a>
 					</div>
 				</li>
 			</ul>
@@ -50,7 +50,7 @@
 <!--This is the breadcrumb menu-->
 	<ul class="breadcrumb">
 		<li><a href="index.html">Home</a></li>
-		<li><a href="contact_details.html">Contact Me</a></li>
+		<li><a href="contact_details.html">Contact Us</a></li>
 	</ul>
 <!--This is the main jumbotron of the page, this holds the cards for the contact details-->
 	<div class="jumbotron jumbotron_title">
@@ -61,20 +61,20 @@
 <div class="card-group">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">FaceBook</h5>
-		<p class="card-text">This would be a <a href="https://facebook.com/">link</a> to my business FaceBook page, but obviously I enjoy my privacy.</p>
+      <h5 class="card-title">FaceBook Page</h5>
+		<p class="card-text">This is our <a href="https://facebook.com/">Facebook page</a>, contact us on this page for bookings.</p>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">GitHub</h5>
-      <p class="card-text">This is an actual <a href="https://github.com/">link</a> to my GitHub account to keep up to date with all my exciting projects.</p>
+      <h5 class="card-title">Luke's personal Instagram</h5>
+      <p class="card-text">This is a <a href="https://www.instagram.com/lkdw_photo/">link</a> to Luke's personal Instagram, this contains all his best photos.</p>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
-      <h5 class="card-title">Twitter</h5>
-      <p class="card-text">This is where you can catch up on tweets I've made about my exciting projects, at the moment it's a <a href="https://twitter.com">link </a>to the Twitter homepage</p>
+      <h5 class="card-title">Chris's personal Instagram</h5>
+      <p class="card-text">This is a <a href="https://www.instagram.com/chrisdawe.photography/">link</a> to Chris's personal Instagram, this contains all his best photos.</p>
     </div>
   </div>
 </div>
