--- a/default.html
+++ b/default.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="index.html">LUKE DAWE</a>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="index.html">DAWE PHOTOGRAPHY</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -40,7 +40,7 @@
 						<a class="dropdown-item" href="projects.html">Projects</a>
 						<a class="dropdown-item" href="about.html">About</a>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="contact_details.html">Contact Me</a>
+						<a class="dropdown-item" href="contact_details.html">Contact Us</a>
 					</div>
 				</li>
 			</ul>
